Added auth endpoints for oauth
